hard-gists/a1178bf10729a27184b1/run.log
=== Docker Run Log for a1178bf10729a27184b1 ===
Started at: Mi 29. Okt 18:50:49 CET 2025

[2025-10-29 18:50:50] START: Running container for a1178bf10729a27184b1
[2025-10-29 18:50:50] SUCCESS: Container 351b53f55adbcf2ea2228db78acf6117cf843eff0bb1a051ae2d7229c5dc3ea0 started for a1178bf10729a27184b1
=== Container logs for a1178bf10729a27184b1 ===
  File "/snippet.py", line 80
    print 'Given icesecreatread password is wrong.'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a1178bf10729a27184b1 ===
[2025-10-29 18:50:52] INFO: Container 351b53f55adbcf2ea2228db78acf6117cf843eff0bb1a051ae2d7229c5dc3ea0 has stopped
